Fix alignment of news counter.

--- a/app/assets/css/components/news.css
+++ b/app/assets/css/components/news.css
@@ -164,6 +164,9 @@
   .news__image.active {
     right: 360px;
   }
+  .news__counter {
+    top: 18px;
+  }
 }
 
 @media (max-width: 864px) {
@@ -194,7 +197,7 @@
   .news__counter {
     position: relative;
     top: 0;
-    margin-top: 18px;
+    margin-top: 9px;
   }
   .news__next {
     transform: none;
